<resources>
    <string name="app_name">TestApplication</string>
    <string name="login_name">登录dxzcdd</string>
    <string name="register_name">注册</string>
    <string name="edit_password">密码</string>
    <string name="edit_account">账号</string>
    <string name="edit_passwordconfirm">确认密码</string>
    <string name="edit_telephone">电话号码</string>
    <string name="edit_name">姓名</string>
    <string name="text_addAccount">注册账号</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="scroll_behavior">@string/appbar_scrolling_view_behavior</string>
    <string name="detail_header_behavior">com.k.neleme.detail.DetailHeaderBehavior</string>
    <string name="load_end">加载完成</string>
    <string name="load_failed">加载失败</string>

</resources>
