<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/edit_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="69dp"
        android:layout_marginBottom="616dp"
        android:autofillHints=""
        android:hint="@string/edit_account"
        android:inputType="text"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="167dp"
        android:layout_marginBottom="518dp"
        android:autofillHints=""
        android:hint="@string/edit_password"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edit_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="255dp"
        android:layout_marginBottom="430dp"
        android:autofillHints=""
        android:hint="@string/edit_passwordconfirm"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edit_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="338dp"
        android:layout_marginBottom="347dp"
        android:autofillHints=""
        android:hint="@string/edit_telephone"
        android:inputType="text"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="449dp"
        android:layout_marginBottom="236dp"
        android:autofillHints=""
        android:hint="@string/edit_name"
        android:inputType="text"
        tools:targetApi="o" />

    <Button
        android:id="@+id/button2"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="74dp"
        android:background="@color/colorAccent"
        android:text="@string/register_name" />
</RelativeLayout>