<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="96dp"
        android:background="@color/colorAccent"
        android:text="@string/login_name" />

    <Button
        android:id="@+id/button3"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="41dp"
        android:background="@android:color/transparent"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/text_addAccount" />

    <EditText
        android:id="@+id/edit_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="447dp"
        android:layout_marginBottom="239dp"
        android:hint="@string/edit_account"
        android:inputType="text"
        android:autofillHints="" tools:targetApi="o" />


    <EditText
        android:inputType="textPassword"
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="488dp"
        android:layout_marginBottom="197dp"
        android:hint="@string/edit_password"
        android:autofillHints="" tools:targetApi="o" />



</RelativeLayout>